fixed text overflow on code blocks. initial styling of landing page

--- a/Client/public/atom-one-dark.css
+++ b/Client/public/atom-one-dark.css
@@ -20,6 +20,8 @@ hue-6-2: #e6c07b
 
 .hljs {
   display: block;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
   overflow-x: auto;
   padding: 0.5em;
   color: #abb2bf;
@@ -30,14 +32,12 @@ hue-6-2: #e6c07b
 .hljs-quote {
   color: #5c6370;
   font-style: italic;
-  overflow-wrap: break-word;
 }
 
 .hljs-doctag,
 .hljs-keyword,
 .hljs-formula {
   color: #c678dd;
-  overflow-wrap: break-word;
 }
 
 .hljs-section,
@@ -46,12 +46,10 @@ hue-6-2: #e6c07b
 .hljs-deletion,
 .hljs-subst {
   color: #e06c75;
-  overflow-wrap: break-word;
 }
 
 .hljs-literal {
   color: #56b6c2;
-  overflow-wrap: break-word;
 }
 
 .hljs-string,
@@ -60,13 +58,11 @@ hue-6-2: #e6c07b
 .hljs-attribute,
 .hljs-meta-string {
   color: #98c379;
-  overflow-wrap: break-word;
 }
 
 .hljs-built_in,
 .hljs-class .hljs-title {
   color: #e6c07b;
-  overflow-wrap: break-word;
 }
 
 .hljs-attr,
@@ -78,7 +74,6 @@ hue-6-2: #e6c07b
 .hljs-selector-pseudo,
 .hljs-number {
   color: #d19a66;
-  overflow-wrap: break-word;
 }
 
 .hljs-symbol,
@@ -88,20 +83,16 @@ hue-6-2: #e6c07b
 .hljs-selector-id,
 .hljs-title {
   color: #61aeee;
-  overflow-wrap: break-word;
 }
 
 .hljs-emphasis {
   font-style: italic;
-  overflow-wrap: break-word;
 }
 
 .hljs-strong {
   font-weight: bold;
-  overflow-wrap: break-word;
 }
 
 .hljs-link {
   text-decoration: underline;
-  overflow-wrap: break-word;
 }
